dc3/kube/network/dc3-networkpolicy.yaml
#
#  Copyright 2019 Pnoker. All Rights Reserved.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dc3net
  namespace: kube-dc3
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              dc3.network/dc3net: "true"
  podSelector:
    matchLabels:
      dc3.version: develop
      dc3.network/dc3net: "true"
